--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
+  "homepage": "https://khaled975.github.io/dashboard_project",
   "name": "dashbord-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.1.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.6.4",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "faker": "^5.5.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
+    "react-router-filebased": "^1.1.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/faker": "5.5.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
